@@ -116,6 +116,20 @@ objects/flowchart/diamond.c
 objects/flowchart/ellipse.c
 objects/flowchart/flowchart.c
 objects/flowchart/parallelogram.c
+objects/Istar/actor.c
+objects/Istar/goal.c
+objects/Istar/istar.c
+objects/Istar/link.c
+objects/Istar/other.c
+objects/Jackson/domain.c
+objects/Jackson/jackson.c
+objects/Jackson/phenomenon.c
+objects/Jackson/requirement.c
+objects/KAOS/goal.c
+objects/KAOS/kaos.c
+objects/KAOS/metaandorrel.c
+objects/KAOS/metabinrel.c
+objects/KAOS/other.c
 objects/network/basestation.c
 objects/network/bus.c
 objects/network/network.c
@@ -168,6 +182,9 @@ sheets/FS.sheet.in
 sheets/Flowchart.sheet.in
 sheets/GRAFCET.sheet.in
 sheets/IsometricMap.sheet.in
+sheets/Istar.sheet.in
+sheets/Jackson.sheet.in
+sheets/KAOS.sheet.in
 sheets/Logic.sheet.in
 sheets/MSE.sheet.in
 sheets/Misc.sheet.in
